disable TX checksum optimization, it's causing ARP lossage in some configurations using Linux dom0

PR port-xen/57743 by Brian Marcotte, thanks for the patch